<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_dark">

            <Button
                android:id="@+id/btNapTien"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:drawableTop="@mipmap/ic_wallet"
                android:text="@string/nap_tien"
                android:textColor="@color/design_default_color_background" />

            <Button
                android:id="@+id/btRutTien_actRutTien"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:drawableTop="@mipmap/ic_money"
                android:text="@string/rut_tien"
                android:textColor="@color/design_default_color_background" />

            <Button
                android:id="@+id/btThanhToan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:drawableTop="@mipmap/ic_barcode"
                android:text="@string/ma_thanh_toan"
                android:textColor="@color/design_default_color_background" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

                <ToggleButton
                    android:id="@+id/toggleButtonEye"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@null"
                    android:drawableLeft="@drawable/ic_visibility_toggle"
                    android:scrollbarSize="4dp"
                    android:text="@null"
                    android:textOff="@null"
                    android:textOn="@null"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/so_du_trong_vi"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvSoDu_fragTaiKhoan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="7"
                android:gravity="right|center_vertical"
                android:text="TextView"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="@dimen/fragment_title_size" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ho_ten_prompt"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/tvHoTen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="TextView"
                android:textColor="@color/vpi__background_holo_dark"
                android:textSize="@dimen/text_size" />

        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email_prompt"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="TextView"
                android:textColor="@color/vpi__background_holo_dark"
                android:textSize="@dimen/text_size" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ngay_sinh_prompt"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/tvNgaySinh"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="TextView"
                android:textColor="@color/vpi__background_holo_dark"
                android:textSize="@dimen/text_size" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/so_dien_thoai_prompt"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/tvSDT"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="TextView"
                android:textColor="@color/vpi__background_holo_dark"
                android:textSize="@dimen/text_size" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cmnd_prompt"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/tvCMND"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="TextView"
                android:textColor="@color/vpi__background_holo_dark"
                android:textSize="@dimen/text_size" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btLogout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/logout" />

        </TableRow>

    </TableLayout>
</ScrollView>