<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background_10"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DatPhongActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/thong_tin_khach_hang"
            android:textColor="@color/vpi__background_holo_dark"
            android:textSize="@dimen/fragment_title_size" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nguoi_dat_phong"
            android:textColor="@color/vpi__background_holo_dark"
            android:textSize="@dimen/fragment_small_title_size" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ho_ten_prompt"
                    android:textColor="#04165E"
                    android:textSize="@dimen/big_text_size" />

                <EditText
                    android:id="@+id/etHoTen_actDatPhong"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ems="10"
                    android:textColor="#61064E"
                    android:inputType="textPersonName"
                    android:background="@color/white"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/so_dien_thoai_prompt"
                    android:textColor="#04165E"
                    android:textSize="@dimen/big_text_size" />

                <EditText
                    android:id="@+id/etSDT_actDatPhong"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@color/white"
                    android:ems="10"
                    android:inputType="phone"
                    android:textColor="#61064E" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ngay_sinh_prompt"
                    android:textColor="#04165E"
                    android:textSize="@dimen/big_text_size" />

                <EditText
                    android:id="@+id/etNgaySinh_actDatPhong"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@color/white"
                    android:ems="10"
                    android:textColor="#61064E" />
            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cmnd_prompt"
                    android:textColor="@color/xanh_bien_dam"
                    android:textSize="@dimen/big_text_size" />

                <EditText
                    android:id="@+id/etCMND_actDatPhong"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@color/white"
                    android:ems="10"
                    android:inputType="number"
                    android:textColor="#61064E" />
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/di_cung"
            android:textColor="@color/black"
            android:textSize="@dimen/fragment_small_title_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/so_nguoi"
                android:textColor="@color/xanh_bien_dam"
                android:textSize="@dimen/big_text_size" />

            <Spinner
                android:id="@+id/spnSoNguoi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@color/white"/>
        </LinearLayout>

        <TableLayout
            android:id="@+id/tableLayoutNguoiDiCung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#6B817C" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/thong_tin_phong"
            android:textColor="@color/black"
            android:textSize="@dimen/fragment_title_size" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ngay_den_string"
                    android:textColor="@color/xanh_bien_dam"
                    android:textSize="@dimen/big_text_size" />

                <EditText
                    android:id="@+id/etNgayDen"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@color/white"
                    android:ems="10"
                    android:inputType="date" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ngay_di_string"
                    android:textColor="@color/xanh_bien_dam"
                    android:textSize="@dimen/big_text_size" />

                <EditText
                    android:id="@+id/etNgayDi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@color/white"
                    android:ems="10"
                    android:inputType="date" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/so_phong"
                    android:textColor="@color/xanh_bien_dam"
                    android:textSize="@dimen/big_text_size" />

                <Spinner
                    android:id="@+id/spnSoPhong"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@color/white"/>
            </TableRow>

        </TableLayout>

        <TableLayout
            android:id="@+id/tableLayoutPhong"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="#6B817C"/>

        <TextView
            android:id="@+id/tvError_actDatPhong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/design_default_color_error"
            android:textSize="@dimen/big_text_size" />

        <Button
            android:id="@+id/btDatPhong_actDatPhong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dat_phong_string" />


    </LinearLayout>


</ScrollView>