<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginLayout"
    android:background="@drawable/background_resort3"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="241dp"
        android:layout_height="48dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/style_button"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#F3098A"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtEmailLogin"
        android:layout_width="326dp"
        android:layout_height="51dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="56dp"
        android:autofillHints="email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textColorHint="#070707"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLogin"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="326dp"
        android:layout_height="55dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:textColorHint="#0E0E0E"
        android:hint="@string/pasword"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmailLogin"
        android:autofillHints="password" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="137dp"
        android:layout_height="45dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="112dp"
        android:background="@drawable/style_button"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#F3098A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="154dp"
        android:layout_height="41dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/style_button"
        android:text="@string/register"
        android:textColor="#F3098A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="41dp"
        android:layout_height="52dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toStartOf="@+id/edtEmailLogin"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLogin"
        app:srcCompat="@drawable/icon_email"
        android:contentDescription="@string/icon_email" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/edtPassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/icon_lock"
        android:contentDescription="@string/icon_lock" />

    <TextView
        android:id="@+id/tvError_actLogin"
        android:layout_width="59dp"
        android:layout_height="18dp"
        android:layout_marginTop="52dp"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>